Updated notes/11.5_Dynamic_Course_Header_Rendering.md with missing image reference.

--- a/notes/11.5_Dynamic_Course_Header_Rendering.md
+++ b/notes/11.5_Dynamic_Course_Header_Rendering.md
@@ -72,3 +72,9 @@ Go back to the Learn Page's `page.tsx`, search for the `<Header />` component, a
 ```
 
 Now, accessing the course should display the relevant information we stored about the course in the database.
+
+<div align="center">
+<img src="./imgs/11.5-Updated-User_Progress.png"
+    alt="Updated schema with new tables."
+    width="475px" height="auto">
+</div>
